--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -27,7 +27,7 @@
         <p>Select a file to upload</p>
     </div>
     <div class="file-chooser">
-        <input class="file-chooser__input" type="file" name="file">
+        <input class="file-chooser__input" type="file" name="file" multiple="">
     </div>
     <input class="file-uploader__submit-button" type="submit" value="Upload">
 </form>
