--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -7,29 +7,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <link rel="icon" href="favicon.ico" />
+    <link href="css/core.css" rel="stylesheet" media="screen" th:href="@{/css/core.css}" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <title>User's storage</title>
+    <title>Upload</title>
 
-    <!-- Bootstrap core CSS -->
-    <link
-            href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-            crossorigin="anonymous" />
 </head>
 
 <body>
-<form method="post" class="file-uploader" action="" enctype="multipart/form-data">
-    <div class="file-uploader__message-area">
-        <p>Select a file to upload</p>
+<div th:replace="fragments/header :: header">
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Static header</a>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
+</div>
+<br>
+<div class="container">
+<form method="post" class="file-uploader" action="" enctype="multipart/form-data">
     <div class="file-chooser">
         <input class="file-chooser__input" type="file" name="file" multiple="">
     </div>
-    <input class="file-uploader__submit-button" type="submit" value="Upload">
+    <input type="submit" value="Upload" class="btn btn-primary">
 </form>
+</div>
+
 </body>
 </html>>
